Search very nearly working
